--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -16,3 +16,6 @@
      <%= render("shared/movies") %>
      <%= render("shared/conclusion") %>
         <%= render("shared/contact") %>
+
+
+             <%= render("shared/movie_modal") %>
