--- a/app/views/shared/_movie_modal.html.erb
+++ b/app/views/shared/_movie_modal.html.erb
@@ -7,13 +7,22 @@
                         </div>
                     </div>
                 </div>
+                 
                 <div class="container">
+              
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
+
                             <div class="modal-body">
-                                <!-- Project Details Go Here -->
-                                <h2 class = "js-movie-name">Movie Name</h2>
-                                <h4 class = "js-year">Year</h4>
+                              <div class = "modal-title">
+                              <div class = "col-md-10 col-xs-12 pull-right">
+                    <h2 class = "js-movie-name">Movie Name</h2></div>
+                              <div class = "col-md-2 col-xs-12 pull-left"><h4 class = "js-year">Year</h4></div>
+                              
+                    
+                </div>
+                                <!-- Movie Details Go Here -->
+                                
                                 <p class="item-intro text-muted js-tagline">Tagline</p>
                          
                                 <div class = "js-description">
@@ -27,7 +36,7 @@
 
                                 
                               
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Movie</button>
+                                <button type="button" class="btn btn-primary close-btn" data-dismiss="modal"><i class="fa fa-times"></i> Close Movie</button>
                             </div>
                         </div>
                     </div>
