--- a/app/views/shared/_movies.html.erb
+++ b/app/views/shared/_movies.html.erb
@@ -12,7 +12,7 @@
                
                 <% @movies.each do |movie| %>
                  <div class="col-md-4 col-sm-6 portfolio-item">
-                     <a  class="portfolio-link js-show-movie" data-movie-uri="<%= movie.id %>" data-toggle="modal">
+                     <a href="#"  class="portfolio-link js-show-movie" data-movie-uri="<%= movie.id %>" data-toggle="modal">
                     <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                          <i class="fa fa-plus fa-3x"></i>
