Update timeline images

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -18,9 +18,8 @@
 }
 
 .img-circle{
-	max-width: 175px;
-	width: 175px;
-	height: 175px;
+	border-radius: 50%;
+
 }
 .selected-img{
 	height: 300px;
