--- a/app/views/shared/_movie_modal.html.erb
+++ b/app/views/shared/_movie_modal.html.erb
@@ -11,7 +11,7 @@
                 <div class="container">
               
                     <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
+                        <div class="col-lg-8 col-lg-offset-2 col-xs-12">
 
                             <div class="modal-body">
                               <div class = "modal-title">
@@ -24,7 +24,7 @@
                                 <!-- Movie Details Go Here -->
                                 
                                 <p class="item-intro text-muted js-tagline">Tagline</p>
-                         
+                                
                                 <div class = "js-description">
                               
                                 </div>
