--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -23,17 +23,18 @@
              <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Content by Michael Kurey</span>
-                </div>
-                <div class="col-md-4">
+              <div class="col-md-3">
                     <span class="copyright">Copyright &copy; Combat Aces 2016</span>
                     </ul>
              
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
+                    <span class="copyright">Content by Michael Kurey /  Design by<a href ="https://dlangsam.github.io/" target="_blank" class="credit-link"> Devorah Langsam</a></span>
+                </div>
+              
+                <div class="col-md-3">
                     <ul class="list-inline quicklinks">
-                        <span class="copyright">Design by<a href ="https://dlangsam.github.io/" target="_blank" class="credit-link"> Devorah Langsam</a></span>
+                        <span class="copyright"><a class = "credit-link" href = "/about">About The Site</a></span>
                     </ul>
                 </div>
             </div>
