Fixed redirect in header

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,23 +23,23 @@
                      <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">The Argument <span class="caret"></span></a>
           <ul class="dropdown-menu dark">
-            <li><a href="/#purpose">Purpose</a></li>
+            <li><a href="#purpose">Purpose</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="/#content">Historical Accuracy</a></li>
+            <li><a href="#content">Historical Accuracy</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="/#size">Large vs. Small</a></li>
+            <li><a href="#size">Large vs. Small</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="/#conclusion">Conclusion</a></li>
+            <li><a href="#conclusion">Conclusion</a></li>
             
           </ul> </li>
             <li>
-                        <a class="page-scroll" href="/#movies">The Movies</a>
+                        <a class="page-scroll" href="#movies">The Movies</a>
             </li>     
              <li>
-                        <a class="page-scroll" href="/#classics">The Classics</a>
+                        <a class="page-scroll" href="#classics">The Classics</a>
             </li>      
             <li>
-                        <a class="page-scroll" href="/#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
             </li>
             </ul>
             </div>
