--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,4 +1,52 @@
- <%= render("shared/header") %>
+
+<div>
+
+
+    <!-- Navigation -->
+    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Combat Aces</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+
+                     <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">The Argument <span class="caret"></span></a>
+          <ul class="dropdown-menu dark">
+            <li><a href="/#purpose">Purpose</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/#content">Historical Accuracy</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/#size">Large vs. Small</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/#conclusion">Conclusion</a></li>
+            
+          </ul> </li>
+            <li>
+                        <a class="page-scroll" href="/#movies">The Movies</a>
+            </li>     
+             <li>
+                        <a class="page-scroll" href="/#classics">The Classics</a>
+            </li>      
+            <li>
+                        <a class="page-scroll" href="/#contact">Contact</a>
+            </li>
+            </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
   <header>
         <div class="container">
             <div class="intro-text">
