Add size field to seeds, add description to size comparison page

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -13,6 +13,7 @@
 
      <%= render("shared/purpose") %>
         <%= render("shared/accuracy") %>
+         <%= render("shared/size") %>
      <%= render("shared/movies") %>
      <%= render("shared/conclusion") %>
         <%= render("shared/contact") %>
