--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -5,7 +5,10 @@
 .credit-link{
 	color: #777;
 }
-
+table{
+	margin-left: auto;
+	margin-right: auto; 
+}
 
 .dropdown-menu.dark > li > a{
 	color: #333;
