Add form for comments

--- a/app/views/shared/_movie_modal.html.erb
+++ b/app/views/shared/_movie_modal.html.erb
@@ -32,6 +32,20 @@
                                 <div class = "js-images">
                               
                                 </div>
+
+                                <div class = "comments">
+                                    <form>
+                             
+                                    <input type="text" name = "e-mail">
+                                    <br>
+                      
+                                    <input type = "text-area" >
+                                    <br>
+                                    <button type = "button" class ="btn special-button" >Submit</button>
+                                    </form>
+                                </div>
+
+
    
 
                                 
